Update to version 0.8.12